Add set picture take timer
- needs a separate heartbeat now so we ping lastSeen to firebase even if user has manual
- unstyled :(

--- a/android/mobile/src/main/res/values/strings.xml
+++ b/android/mobile/src/main/res/values/strings.xml
@@ -1,17 +1,28 @@
 <resources>
 
-  <string name="app_name">peepz</string>
-  <string name="sign_in">Sign in</string>
-  <string name="sign_out">Sign out</string>
-  <string name="take_picture">Take picture</string>
-  <string name="because_the_picture_take">Because the picture take</string>
-  <string name="made_with_love_by_novoda">Made with 😘 by Novoda</string>
+    <string name="app_name">peepz</string>
+    <string name="sign_in">Sign in</string>
+    <string name="set_picture_timer">Set picture timer</string>
+    <string name="sign_out">Sign out</string>
+    <string name="take_picture">Take picture</string>
+    <string name="because_the_picture_take">Because the picture take</string>
+    <string name="made_with_love_by_novoda">Made with 😘 by Novoda</string>
+    <string name="very_frequent">30 seconds</string>
+    <string name="frequent">2 minutes</string>
+    <string name="infrequent">5 minutes</string>
+    <string name="off">Off</string>
 
-  <string name="peepz_signin_button">@string/sign_in</string>
-  <string name="peepz_signin_tagline">@string/because_the_picture_take</string>
-  <string name="peepz_signin_footer">@string/made_with_love_by_novoda</string>
+    <string name="peepz_signin_button">@string/sign_in</string>
+    <string name="peepz_signin_tagline">@string/because_the_picture_take</string>
+    <string name="peepz_signin_footer">@string/made_with_love_by_novoda</string>
 
-  <string name="peepz_menu_take_picture">@string/take_picture</string>
-  <string name="peepz_menu_sign_out">@string/sign_out</string>
+    <string name="peepz_menu_take_picture">@string/take_picture</string>
+    <string name="peepz_menu_timer">@string/set_picture_timer</string>
+    <string name="peepz_menu_sign_out">@string/sign_out</string>
+
+    <string name="action_set_timer_very_frequent">@string/very_frequent</string>
+    <string name="action_set_timer_frequent">@string/frequent</string>
+    <string name="action_set_timer_infrequent">@string/infrequent</string>
+    <string name="action_set_timer_off">@string/off</string>
 
 </resources>
