--- a/android/mobile/src/main/res/values/strings.xml
+++ b/android/mobile/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">peepz</string>
+    <string name="app_name">Peepz</string>
     <string name="sign_in">Sign in</string>
     <string name="set_picture_timer">Set picture timer</string>
     <string name="sign_out">Sign out</string>
