--- a/android/mobile/src/main/res/values/strings.xml
+++ b/android/mobile/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="set_picture_timer">Set picture timer</string>
     <string name="sign_out">Sign out</string>
     <string name="take_picture">Take picture</string>
+    <string name="filter_options">Filter options</string>
     <string name="because_the_picture_take">Because the picture take</string>
     <string name="made_with_love_by_novoda">Made with 😘 by Novoda</string>
     <string name="show_offline_peepz">Show offline Peepz</string>
@@ -26,6 +27,7 @@
     <string name="settings_dialog_timer_frequent">@string/_2_minutes</string>
     <string name="settings_dialog_timer_infrequent">@string/_5_minutes</string>
     <string name="settings_dialog_timer_off">@string/off</string>
+    <string name="settings_dialog_filters_heading">@string/filter_options</string>
     <string name="settings_dialog_filter_offline">@string/show_offline_peepz</string>
     <string name="settings_dialog_button_cancel">@string/cancel</string>
     <string name="settings_dialog_button_ok">@string/ok</string>
