--- a/android/mobile/src/main/res/values/strings.xml
+++ b/android/mobile/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">Peepz</string>
     <string name="sign_in">Sign in</string>
     <string name="set_picture_timer">Set picture timer</string>
+    <string name="settings">Settings</string>
     <string name="sign_out">Sign out</string>
     <string name="take_picture">Take picture</string>
     <string name="filter_options">Filter options</string>
@@ -20,7 +21,7 @@
     <string name="peepz_signin_footer">@string/made_with_love_by_novoda</string>
 
     <string name="peepz_menu_take_picture">@string/take_picture</string>
-    <string name="peepz_menu_timer">@string/set_picture_timer</string>
+    <string name="peepz_menu_settings">@string/settings</string>
     <string name="peepz_menu_sign_out">@string/sign_out</string>
 
     <string name="settings_dialog_timer_heading">@string/set_picture_timer</string>
